feat: dark theme

--- a/components/atoms/avatar/avatar.module.scss
+++ b/components/atoms/avatar/avatar.module.scss
@@ -12,7 +12,7 @@
   overflow: hidden;
   flex-shrink: 0;
 
-  background-color: var(--white);
+  background-color: var(--text-black);
 
   svg,
   img {
