--- a/components/atoms/newPostNotification/newPostNotification.module.scss
+++ b/components/atoms/newPostNotification/newPostNotification.module.scss
@@ -12,7 +12,7 @@
   border: none;
   box-shadow: var(--shadow-secondary);
   background-color: var(--color-primary);
-  color: var(--white);
+  color: var(--text-black);
   padding: 1rem 1.25rem;
   text-transform: capitalize;
   display: flex;
