--- a/components/atoms/signInButton/signInButton.module.scss
+++ b/components/atoms/signInButton/signInButton.module.scss
@@ -2,7 +2,7 @@
   border-radius: var(--radius-medium);
   padding: 0.5rem 1rem;
   background-color: var(--color-primary);
-  color: var(--white);
+  color: var(--text-black);
   font-weight: 500;
   border: none;
   transition: box-shadow var(--transition-fast);
