--- a/components/organisms/postModal/postModal.module.scss
+++ b/components/organisms/postModal/postModal.module.scss
@@ -4,7 +4,7 @@
   position: relative;
   z-index: 1;
   width: 23rem;
-  background-color: var(--white);
+  background-color: var(--text-black);
   left: 0;
   right: 0;
   bottom: 0;
