--- a/components/atoms/accountPost/accountPost.module.scss
+++ b/components/atoms/accountPost/accountPost.module.scss
@@ -24,7 +24,7 @@
 .image {
   width: 100%;
   height: 100%;
-  background-color: var(--white);
+  background-color: var(--text-black);
   object-fit: contain;
 
 }
@@ -53,7 +53,7 @@
   align-items: center;
   gap: 0.75rem;
   background-color: rgb(35, 35, 35, 0.55);
-  color: var(--white);
+  color: var(--text-black);
 
   font-size: 1.5rem;
 
