--- a/components/atoms/dropZone/dropZone.module.scss
+++ b/components/atoms/dropZone/dropZone.module.scss
@@ -52,7 +52,7 @@
 .buttonInput {
   border-radius: var(--radius-medium);
   background-color: var(--color-primary);
-  color: var(--white);
+  color: var(--text-black);
   font-weight: 500;
   border: none;
   transition: all var(--transition-fast);
