--- a/components/molecules/cookiesPopup/cookiesPopup.module.scss
+++ b/components/molecules/cookiesPopup/cookiesPopup.module.scss
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  background-color: var(--white);
+  background-color: var(--text-black);
   padding: 1rem 2rem;
   gap: 1rem;
   z-index: 3;
