--- a/components/molecules/listModal/listModal.module.scss
+++ b/components/molecules/listModal/listModal.module.scss
@@ -22,7 +22,7 @@
   background-color: var(--white);
   text-align: center;
   padding: 1rem 2rem;
-  border-radius: var(--radius-big) var(--radius-big) 0 0;
+  border-radius: var(--radius-medium) var(--radius-medium) 0 0;
 
   @include common.mobile-landscape {
     padding: 0.75rem 2rem;
@@ -30,7 +30,6 @@
 }
 
 .listItem {
-  border-top: var(--border-gray);
   font-weight: 700;
   overflow: hidden;
 
@@ -46,16 +45,16 @@
 
 .listItemFirst {
   border-bottom: 0;
-  border-radius: var(--radius-big) var(--radius-big) 0 0;
+  border-radius: var(--radius-medium) var(--radius-medium) 0 0;
 }
 
 .listItemLast {
   @include common.mobile-landscape {
-    border-radius: 0 0 var(--radius-big) var(--radius-big);
+    border-radius: 0 0 var(--radius-medium) var(--radius-medium);
   }
 
   @include common.mediaquery('desktop') {
-    border-radius: 0 0 var(--radius-big) var(--radius-big);
+    border-radius: 0 0 var(--radius-medium) var(--radius-medium);
   }
 }
 
