--- a/components/molecules/confirmationAlert/confirmationAlert.module.scss
+++ b/components/molecules/confirmationAlert/confirmationAlert.module.scss
@@ -3,7 +3,7 @@
 .container {
   max-width: 85%;
   min-width: 75%;
-  background-color: var(--text-black);
+  background-color: var(--white);
   border-radius: var(--radius-medium);
   position: relative;
   padding: 2rem 3rem;
