--- a/components/molecules/imagesPreview/imagesPreview.module.scss
+++ b/components/molecules/imagesPreview/imagesPreview.module.scss
@@ -37,7 +37,7 @@
 
 .emptySpace {
   background-color: var(--color-primary);
-  color: var(--text-black);
+  color: rgb(255, 255, 255);
   border-radius: var(--radius-small);
   border: 0;
   box-shadow: var(--shadow-secondary);
