--- a/components/molecules/commentForm/commentForm.module.scss
+++ b/components/molecules/commentForm/commentForm.module.scss
@@ -16,6 +16,7 @@
   padding: 0.5rem;
   border: var(--border-gray);
   transition: background-color var(--transition-fast);
+  background-color: var(--white);
 
 
   &:hover,
