--- a/components/molecules/navbar/navbar.module.scss
+++ b/components/molecules/navbar/navbar.module.scss
@@ -7,8 +7,7 @@
   align-items: center;
   padding: 0.2rem 0;
   border-top: var(--border-gray);
-  background-color: rgb(255, 255, 255, 0.92);
-  backdrop-filter: blur(10px);
+  background-color: var(--white);
   position: fixed;
   bottom: 0;
   left: 0;
