--- a/components/molecules/postSlider/postSlider.module.scss
+++ b/components/molecules/postSlider/postSlider.module.scss
@@ -101,8 +101,7 @@
   z-index: 2;
   list-style-type: none;
   padding: 0.35rem 0.5rem;
-  background-color: var(--bg-blur);
-  backdrop-filter: var(--backdrop-blur);
+  background-color: var(--white);
   border-radius: var(--radius-small);
   box-shadow: var(--shadow-secondary);
 }
