feat: followers modal

--- a/components/atoms/accountPost/accountPost.module.scss
+++ b/components/atoms/accountPost/accountPost.module.scss
@@ -24,7 +24,7 @@
 .image {
   width: 100%;
   height: 100%;
-  background-color: var(--text-black);
+  background-color: var(--white);
   object-fit: contain;
 
 }
@@ -53,7 +53,8 @@
   align-items: center;
   gap: 0.75rem;
   background-color: rgb(35, 35, 35, 0.55);
-  color: var(--text-black);
+  color: rgb(255, 255, 255);
+  font-weight: 600;
 
   font-size: 1.5rem;
 
@@ -64,7 +65,7 @@
 
   @include common.mediaquery('desktop') {
     font-size: 2.5rem;
-    gap: 1.25rem;
+    gap: 2rem;
 
     svg {
       width: 2.5rem;
@@ -78,4 +79,7 @@
   justify-content: center;
   align-items: center;
 
+  @include common.mediaquery('desktop') {
+    gap: 0.25rem;
+  }
 }
