--- a/components/pages/home/home.module.scss
+++ b/components/pages/home/home.module.scss
@@ -86,3 +86,10 @@
   width: 2.25rem;
   height: 2.25rem;
 }
+
+.link {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  justify-content: flex-start;
+}
