--- a/components/atoms/button/button.module.scss
+++ b/components/atoms/button/button.module.scss
@@ -9,6 +9,7 @@
   padding: 0.4rem 0.65rem;
   text-align: center;
   display: flex;
+  justify-content: center;
   text-transform: capitalize;
 
   &:focus {
