--- a/components/atoms/modal/modal.module.scss
+++ b/components/atoms/modal/modal.module.scss
@@ -34,7 +34,10 @@
   border: none;
   position: absolute;
   right: 1rem;
-  top: 1rem;
+  top: 0.75rem;
+  background-color: var(--bg-secondary);
+  padding: 0.25rem;
+  border-radius: 100%;
 
   &:hover {
     color: var(--color-primary);
