--- a/components/pages/signIn/signIn.module.scss
+++ b/components/pages/signIn/signIn.module.scss
@@ -22,6 +22,9 @@
   text-align: center;
   justify-content: center;
   align-items: center;
+  padding: 0.6rem 0;
+  font-weight: 600;
+  font-size: 1.25rem;
 }
 
 
