--- a/components/atoms/button/button.module.scss
+++ b/components/atoms/button/button.module.scss
@@ -12,6 +12,11 @@
   justify-content: center;
   text-transform: capitalize;
 
+  &:hover,
+  &:focus {
+    background-color: var(--bg-secondary);
+  }
+
   &:focus {
     outline: none;
     box-shadow: var(--shadow-focus);
@@ -33,6 +38,10 @@
   background-color: var(--white);
   color: var(--color-primary);
   box-shadow: inset 0 0 0 2px var(--color-primary);
+
+  &:focus {
+    box-shadow: inset 0 0 0 2px var(--color-primary), var(--shadow-focus);
+  }
 
   &:disabled {
     background-color: transparent;
