--- a/components/atoms/tooltip/tooltip.module.scss
+++ b/components/atoms/tooltip/tooltip.module.scss
@@ -10,13 +10,13 @@
   display: none;
   position: absolute;
   background-color: var(--white);
-  border-radius: var(--radius-medium);
+  border-radius: var(--radius-small);
   box-shadow: var(--shadow);
   left: 50%;
   transform: translateX(-50%);
   white-space: nowrap;
   line-height: 1;
-  padding: 0.5rem;
+  padding: 0.6rem 0.75rem;
   --tooltip-arrow-size: 1rem;
 
   @include common.mediaquery('desktop') {
