--- a/components/molecules/comment/comment.module.scss
+++ b/components/molecules/comment/comment.module.scss
@@ -17,7 +17,7 @@
   }
 
   @include common.mediaquery('desktop') {
-    column-gap: 1.5rem;
+    column-gap: 1rem;
     row-gap: 1.5rem;
   }
 
@@ -34,7 +34,7 @@
 .avatarContainer {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 
   @include common.mediaquery('desktop') {
     margin-left: 0.5rem;
@@ -50,17 +50,19 @@
   font-weight: 600;
   display: inline;
   font-size: 1rem;
+  flex-shrink: 0;
 }
 
 .content {
   display: inline;
   margin-left: 0.5rem;
-
 }
 
 .commentText {
   white-space: pre-line;
   word-break: break-all;
+  display: flex;
+  align-items: flex-start;
 }
 
 .createdAt {
