--- a/components/pages/home/home.module.scss
+++ b/components/pages/home/home.module.scss
@@ -80,6 +80,9 @@
 .username {
   font-weight: 600;
   font-size: 1.25rem;
+  max-width: 10rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .avatar {
