--- a/components/atoms/postPlaceholder/postPlaceholder.module.scss
+++ b/components/atoms/postPlaceholder/postPlaceholder.module.scss
@@ -3,10 +3,10 @@
 .placeholder {
   background-color: var(--bg-secondary);
   width: var(--post-width);
-  height: 20rem;
+  height: 25rem;
   border-radius: var(--radius-medium);
   opacity: 0.5;
-  animation: skeleton-loading 1s linear infinite alternate;
+  animation: var(--placeholder-animation);
   box-shadow: var(--shadow-primary);
   margin: 0 auto;
   margin-bottom: 4rem;
@@ -16,12 +16,13 @@
   }
 }
 
-@keyframes skeleton-loading {
-  0% {
-    background-color: var(--bg-secondary);
-  }
 
-  100% {
-    background-color: rgb(190, 190, 190);
+
+.small {
+  height: 12rem;
+  margin: 0;
+
+  @include common.mediaquery('desktop') {
+    height: 15rem;
   }
 }
