--- a/components/atoms/button/button.module.scss
+++ b/components/atoms/button/button.module.scss
@@ -3,26 +3,25 @@
 .button {
   border-radius: var(--radius-medium);
   background-color: var(--color-primary);
-  color: var(--white);
+  color: rgb(255, 255, 255);
   font-weight: 500;
   border: none;
-  transition: all var(--transition-fast);
-  padding: 0.35rem 0.7rem;
+  padding: 0.4rem 0.65rem;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  text-transform: capitalize;
 
-  &::first-letter {
-    text-transform: uppercase;
+  &:hover,
+  &:focus {
+    background-color: var(--bg-secondary);
   }
 
   &:focus {
     outline: none;
+    box-shadow: var(--shadow-focus);
   }
 
-  &:not(:disabled) {
-    &:hover {
-      transform: scale(1.05);
-    }
-  }
 
   &:disabled {
     background-color: var(--color-disabled);
@@ -30,23 +29,18 @@
   }
 
   @include common.mediaquery('desktop') {
-    padding: 0.75rem 1.5rem;
+    padding: 0.5rem 0.9rem;
   }
 }
 
 .button-secondary {
   @extend .button;
-  background-color: transparent;
+  background-color: var(--white);
   color: var(--color-primary);
   box-shadow: inset 0 0 0 2px var(--color-primary);
 
-  &:hover,
   &:focus {
-    background-color: var(--bg-gray);
-  }
-
-  &:focus {
-    box-shadow: var(--shadow-focus);
+    box-shadow: inset 0 0 0 2px var(--color-primary), var(--shadow-focus);
   }
 
   &:disabled {
