--- a/components/atoms/newPostNotification/newPostNotification.module.scss
+++ b/components/atoms/newPostNotification/newPostNotification.module.scss
@@ -6,20 +6,17 @@
   right: 0;
   margin: 0 auto;
   width: max-content;
-  z-index: 2;
-  top: 7rem;
+  z-index: 3;
+  top: 3rem;
   border-radius: var(--radius-small);
   border: none;
   box-shadow: var(--shadow-secondary);
   background-color: var(--color-primary);
-  color: var(--white);
-  padding: 1rem 1.25rem;
+  color: rgb(255, 255, 255);
+  padding: 0.75rem 1rem;
   text-transform: capitalize;
   display: flex;
-  gap: 0.75rem;
+  gap: 0.35rem;
   align-items: center;
-
-  @include common.mediaquery('desktop') {
-    top: 10rem;
-  }
+  font-weight: 600;
 }
