--- a/components/molecules/commentForm/commentForm.module.scss
+++ b/components/molecules/commentForm/commentForm.module.scss
@@ -1,24 +1,35 @@
+@use '/styles/common.scss';
+
 .addComment {
-  display: grid;
-  grid-template-columns: 8fr 1fr;
-  gap: 1.5rem;
+  display: flex;
   align-items: center;
+  justify-content: space-between;
+  gap: 1.5rem;
 }
 
 .commentInput {
-  min-width: 100%;
-  height: 2rem;
-  min-height: 2rem;
+  height: 2.5rem;
+  min-height: 2.5rem;
   resize: vertical;
-  border-radius: var(--radius-small);
-  border-bottom-right-radius: 0;
-  border: 1px solid var(--color-secondary);
+  width: 80%;
+  border-radius: var(--radius-medium);
   padding: 0.5rem;
+  border: var(--border-gray);
   transition: background-color var(--transition-fast);
+  background-color: var(--white);
 
 
   &:hover,
   &:focus {
     background-color: var(--bg-gray);
+  }
+
+  &:focus {
+    outline: none;
+    box-shadow: var(--shadow-focus);
+  }
+
+  @include common.mediaquery('desktop') {
+    width: 80%;
   }
 }
