--- a/components/molecules/postHeader/postHeader.module.scss
+++ b/components/molecules/postHeader/postHeader.module.scss
@@ -9,7 +9,6 @@
     }
 }
 
-
 .userAnchor {
     display: flex;
     align-items: center;
@@ -17,13 +16,19 @@
     font-size: 0.8rem;
 }
 
+.username {
+    max-width: 6rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    @include common.mediaquery('desktop') {
+        max-width: 10rem;
+    }
+}
+
 .options {
     margin-left: auto;
     display: flex;
     gap: 1rem;
     align-items: center;
-}
-
-.followButton {
-    padding: 0.35rem 0.5rem;
 }
