--- a/components/organisms/accountPosts/accountPosts.module.scss
+++ b/components/organisms/accountPosts/accountPosts.module.scss
@@ -3,13 +3,13 @@
 .posts {
   display: grid;
   place-content: center;
-  margin-top: 2rem;
+  margin-top: 1rem;
   gap: 0.5rem;
   padding: 0 1rem;
   grid-template-columns: repeat(2, 1fr);
 
   @include common.mediaquery('tablet') {
-    margin-top: 6rem;
+    margin-top: 3rem;
     gap: 0.75rem;
     grid-template-columns: repeat(3, 1fr);
   }
@@ -19,5 +19,30 @@
     padding: 0 3rem;
 
     grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.placeholder {
+  background-color: var(--bg-primary);
+  height: 100%;
+  border-radius: var(--radius-small);
+  min-height: 10rem;
+
+  @include common.mediaquery('desktop') {
+    min-height: 20rem;
+  }
+
+  animation: flicker 2s ease-in-out infinite alternate;
+
+}
+
+
+@keyframes flicker {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0.25;
   }
 }
