--- a/components/organisms/homePost/homePost.module.scss
+++ b/components/organisms/homePost/homePost.module.scss
@@ -1,8 +1,8 @@
 @use '/styles/common.scss';
 
 .homePost {
-    box-shadow: rgba(0, 0, 0, 0.12) 0px -1px 3px 0px, rgba(0, 0, 0, 0.24) 0px 1px 2px 0px;
+    box-shadow: var(--shadow);
 
-    border-radius: var(--radius-big);
+    border-radius: var(--radius-medium);
     width: var(--post-width);
 }
