--- a/components/pages/createPost/createPost.module.scss
+++ b/components/pages/createPost/createPost.module.scss
@@ -2,9 +2,9 @@
 
 .createPost {
   display: grid;
-  width: min(90%, 60rem);
-  margin: 0 auto;
-  margin-top: 2rem;
+  width: clamp(20rem, 70%, 80rem);
+  margin: 2rem auto;
+  margin-bottom: 4rem;
   gap: 2rem;
 }
 
@@ -12,7 +12,6 @@
   display: flex;
   justify-content: space-between;
 }
-
 
 .textAreaContainer {
   border: 1px solid var(--color-primary);
