--- a/components/pages/home/home.module.scss
+++ b/components/pages/home/home.module.scss
@@ -16,6 +16,7 @@
   align-items: center;
   gap: 3rem;
   margin-top: 2rem;
+  margin-bottom: 4rem;
 
   @include common.mediaquery('desktop') {
     grid-auto-columns: auto;
@@ -29,19 +30,20 @@
   display: none;
 
   @include common.mediaquery('desktop') {
-    max-width: 25rem;
     position: sticky;
-    right: 3rem;
+    right: 0;
     top: 0;
     height: 100vh;
 
+    flex-grow: 0;
+    width: clamp(25rem, 27%, 50rem);
     padding-top: 3rem;
+    padding-right: 2rem;
     padding-left: 2rem;
 
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
-    flex-grow: 1;
+    gap: 2rem;
 
     border-left: 1px solid var(--color-gray);
   }
@@ -50,7 +52,47 @@
 
 .asideItem {
   border-radius: var(--radius-medium);
-  padding: 1rem;
+  padding: 1.25rem;
   box-shadow: var(--shadow-primary);
   background-color: var(--bg-secondary);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.asideList {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.asideListItem {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+}
+
+.asideFollowButton {
+  margin-left: auto;
+}
+
+.username {
+  font-weight: 600;
+  font-size: 1.25rem;
+  max-width: 10rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.avatar {
+  width: 2.25rem;
+  height: 2.25rem;
+}
+
+.link {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  justify-content: flex-start;
 }
