--- a/components/atoms/avatar/avatar.module.scss
+++ b/components/atoms/avatar/avatar.module.scss
@@ -12,9 +12,22 @@
   flex-shrink: 0;
   background-color: var(--white);
 
-  svg,
   img {
     width: 100%;
     height: 100%;
+  }
+}
+
+
+.noImage {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &>svg {
+    width: 90%;
+    height: 90%;
   }
 }
