--- a/components/atoms/button/button.module.scss
+++ b/components/atoms/button/button.module.scss
@@ -14,17 +14,15 @@
 
   &:hover,
   &:focus {
-    background-color: var(--bg-secondary);
+    box-shadow: var(--shadow-focus);
   }
 
   &:focus {
     outline: none;
-    box-shadow: var(--shadow-focus);
   }
 
 
   &:disabled {
-    background-color: var(--color-disabled);
     opacity: 0.7;
   }
 
@@ -39,7 +37,8 @@
   color: var(--color-primary);
   box-shadow: inset 0 0 0 2px var(--color-primary);
 
-  &:focus {
+  &:focus,
+  &:hover {
     box-shadow: inset 0 0 0 2px var(--color-primary), var(--shadow-focus);
   }
 
