--- a/components/pages/account/account.module.scss
+++ b/components/pages/account/account.module.scss
@@ -37,7 +37,7 @@
   gap: 1rem;
 }
 
-.avatar {
+figure.avatar {
   --account-avatar-size: 6rem;
   width: var(--account-avatar-size);
   height: var(--account-avatar-size);
