--- a/components/pages/chat/chat.module.scss
+++ b/components/pages/chat/chat.module.scss
@@ -3,7 +3,6 @@
 .chat {
     display: flex;
     flex-direction: column;
-
 }
 
 .users {
@@ -36,10 +35,11 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-end;
+    justify-content: flex-start;
     list-style: none;
     padding: 1rem 2rem;
     gap: 2rem;
+    max-height: 40rem;
     overflow-y: scroll;
 }
 
@@ -56,6 +56,10 @@
     &>figure {
         order: 2;
     }
+}
+
+.loading {
+    padding-bottom: 10rem;
 }
 
 .messageFriend {
